[package]
name = "coolbeans"
version = "0.1.0"
edition = "2018"


[lib]
name = "coolbeans-core"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
[[bin]]
name = "cli"
path = "src/bin/cli.rs"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
thiserror = "1.0"
