[package]
name = "coolbeans"
version = "0.1.0"
edition = "2018"


[lib]
name = "coolbeans"
path = "src/lib.rs"

[[bin]]
name = "coolbeans_server"
path = "src/bin/server.rs"
[[bin]]
name = "coolbeans_cli"
path = "src/bin/cli.rs"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"
reqwest = "^0.11"
thiserror = "^1.0"
url = { version = "^2.2.2", features = ["serde"] }

rocket = { version = "^0.5.0-rc.1" }
juniper = { version = "^0.15" }
juniper_rocket = { version = "^0.8" }

diesel = { version = "^1.4.7", features = ["postgres", "r2d2", "chrono"] }
dotenv = "^0.15.0"
